--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/swagger": "^1.2.0",
+    "elysia": "^1.1.29",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "^1.1.42"
   },
   "module": "src/index.js"
 }
